2008-05-03  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-dispatcher.el: New file, separates out the UI and command 
	execution machinery from VCS-specific logic left in vc.el.  The
	separation is not yet completely clean, but it's a good start.
	* vc.el: This file is about 1700 lines shorter now.

2008-05-02  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-start): Move setting of
	compilation-directory after (funcall mode) as that resets local
	variables, this fixes recompile in grep buffers.
	* grep.el (grep-mode-map): Bind "g" to recompile (like in dired &c).

2008-05-02  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-arch.el, vc-bzr.el, vc-cvs.el, vc-git.el, vc-hg.el,
	vc-hooks.el, vc-mcvs.el, vc-mtn.el, vc-rcs.el, vc-sccs.el,
	vc-svn.el, vc.el: (vc-*-checkout-model): Make sure every backend
	has one of these and that all are called in compatible ways.
	* vc-arch.el, vc-bzr.el, vc-cvs.el, vc-git.el, vc-hg.el,
	vc-hooks.el, vc-mcvs.el, vc-mtn.el, vc-rcs.el, vc-sccs.el,
	vc-svn.el, vc.el: (vc-*-revision-granularity): Make sure every
	backend has one of these.

2008-05-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/octave-mod.el (octave-abbrev-table): Move defvar and
	initialization into define-abbrev-table.  Use :regexp.
	(octave-mode-syntax-table): Don't set word syntax for `.

	* files.el (minibuffer-with-setup-hook): Allow `fun' expressions rather
	than only value.

	* dired.el (dired-read-dir-and-switches):
	Set minibuffer-completing-file-name and call substitute-in-file-name.
	(dired-format-columns-of-files): Use completion--insert-strings.

	* minibuffer.el (completion-hilit-commonality): Revert last change:
	the leftover code was actually useful.
	(completion--insert-strings): Use string-width rather than length.

2008-05-02  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-dir-mode-map): Enable mouse bindings.
	(vc-at-event): New macro: run the body at the even location.
	(vc-dir-menu, vc-dir-toggle-mark): Use it.