@@ -83,7 +83,6 @@
 ;; - log-view-mode ()				   OK
 ;; - show-log-entry (revision)			   OK
 ;; - wash-log (file)				   COULD BE SUPPORTED
-;; - logentry-check ()				   NOT NEEDED
 ;; - comment-history (file)			   ??
 ;; - update-changelog (files)			   COULD BE SUPPORTED
 ;; * diff (file &optional rev1 rev2 buffer)	   OK
